--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-header></app-header>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -19,3 +20,4 @@
 </ul>
 
 <router-outlet></router-outlet>
+<app-footer></app-footer>
