--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,3 +1,13 @@
-<p>
-  header works!
-</p>
+<header class="navbar navbar-light navbar-expand-lg bg-light">
+  <a class="navbar-brand" href="#">Logo</a>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">User login</a>
+      </li>
+      <li class="nav-item active">
+        <app-button [label]="'Logo ff'"></app-button>
+      </li>
+    </ul>
+  </div>
+</header>
