--- a/src/app/core/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/core/breadcrumbs/breadcrumbs.component.html
@@ -1,3 +1,5 @@
-<p>
-  breadcrumbs works!
-</p>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item active" aria-current="page">Courses</li>
+    </ol>
+  </nav>
