--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -6,7 +6,7 @@
         <a class="nav-link" href="#">User login</a>
       </li>
       <li class="nav-item active">
-        <app-button [label]="'Logo ff'"></app-button>
+        <app-button [label]="'Logo ff'" [type]="'button'"></app-button>
       </li>
     </ul>
   </div>
