--- a/src/app/course-list/search/search.component.html
+++ b/src/app/course-list/search/search.component.html
@@ -1,3 +1,4 @@
-<p>
-  search works!
-</p>
+<form class="form-inline">
+  <input type="text" class="form-control" placeholder="Search" />
+  <app-button [label]="'Search'" [type]="'submit'" class="ml-1"></app-button>
+</form>
