--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary" type="button">{{ label }}</button>
+<button class="btn btn-primary" type="type">{{ label }}</button>
