--- a/src/app/course-list/course/course.component.html
+++ b/src/app/course-list/course/course.component.html
@@ -1,3 +1,9 @@
-<div>
-  <app-course-description></app-course-description>
+<div class="card">
+  <div class="card-body row">
+    <app-course-description [course]="course" class="col-11"></app-course-description>
+    <div class="col-1">
+      <app-button [label]="'Edit'" class="mb-1 course-btn"></app-button>
+      <app-button [label]="'Delete'" class="course-btn"></app-button>
+    </div>
+  </div>
 </div>
