--- a/src/app/course-list/courses/courses.component.html
+++ b/src/app/course-list/courses/courses.component.html
@@ -1,5 +1,10 @@
 <div class="container-fluid">
   <app-menu></app-menu>
-  <app-course *ngFor="let course of courses" [course]="course"> </app-course>
+  <app-course
+    *ngFor="let course of courses"
+    [course]="course"
+    (deleteCourse)="deleteCourse($event)"
+  >
+  </app-course>
   <app-button [label]="'Load more'"></app-button>
 </div>
