display courseId for deleted course

--- a/src/app/course-list/courses/courses.component.html
+++ b/src/app/course-list/courses/courses.component.html
@@ -6,5 +6,5 @@
     (deleteCourse)="deleteCourse($event)"
   >
   </app-course>
-  <app-button [label]="'Load more'"></app-button>
+  <app-button [label]="'Load more'" (clickHandler)="loadMore()"></app-button>
 </div>
