--- a/src/app/course-list/search/search.component.html
+++ b/src/app/course-list/search/search.component.html
@@ -1,11 +1,15 @@
-<form class="form-inline">
+<div class="form-inline">
   <input
     type="text"
     class="form-control"
     placeholder="Search"
     [(ngModel)]="searchValue"
     name="search"
-    (change)="onChange($event)"
   />
-  <app-button [label]="'Search'" [type]="'submit'" class="ml-1"></app-button>
-</form>
+  <app-button
+    label="Search"
+    [type]="submit"
+    (click)="onClick($event)"
+    class="ml-1"
+  ></app-button>
+</div>
