remove excessive handler

--- a/src/app/course-list/course/course.component.html
+++ b/src/app/course-list/course/course.component.html
@@ -3,7 +3,7 @@
     <app-course-description [course]="course" class="col-11"></app-course-description>
     <div class="col-1">
       <app-button label="Edit" class="mb-1 course-btn"></app-button>
-      <app-button label="Delete" class="course-btn" (click)="onDeleteBtnClick($event)"></app-button>
+      <app-button label="Delete" class="course-btn" (click)="deleteCourse.emit(course.id)"></app-button>
     </div>
   </div>
 </div>
