--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,10 +3,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">User login</a>
+        <a class="nav-link user-login" href="#">User login</a>
       </li>
       <li class="nav-item active">
-        <app-button [label]="'Logo ff'" [type]="'button'"></app-button>
+        <app-button label="Log off" type="button" (click)="logOff($event)"></app-button>
       </li>
     </ul>
   </div>
