test click handler in header component

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -6,7 +6,7 @@
         <a class="nav-link user-login" href="#">User login</a>
       </li>
       <li class="nav-item active">
-        <app-button label="Log off" type="button" (click)="logOff($event)"></app-button>
+        <app-button label="Log off" type="button" (click)="logOff($event)" class="logoff-btn"></app-button>
       </li>
     </ul>
   </div>
