--- a/src/app/course-list/course-description/course-description.component.html
+++ b/src/app/course-list/course-description/course-description.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <h5 class="card-title col-8">{{ course.title }}</h5>
-  <div class="col-2">{{ course.creationDate | date: 'dd.MM.yyyy' }}</div>
-  <div class="col-2">{{ course.duration | minutesToHours }}</div>
-  <p class="card-text col-12">{{ course.description }}</p>
+  <div class="col-2 course-creation-date">{{ course.creationDate | date: 'dd.MM.yyyy' }}</div>
+  <div class="col-2 course-duration">{{ course.duration | minutesToHours }}</div>
+  <p class="card-text col-12 course-description">{{ course.description }}</p>
 </div>
