update tests for menu component

--- a/src/app/course-list/search/search.component.html
+++ b/src/app/course-list/search/search.component.html
@@ -10,6 +10,6 @@
     label="Search"
     [type]="button"
     (click)="onClick($event)"
-    class="ml-1"
+    class="ml-1 menu-search-btn"
   ></app-button>
 </div>
