--- a/src/app/course-list/search/search.component.html
+++ b/src/app/course-list/search/search.component.html
@@ -8,7 +8,7 @@
   />
   <app-button
     label="Search"
-    [type]="button"
+    type="button"
     (click)="onClick($event)"
     class="ml-1 menu-search-btn"
   ></app-button>
