--- a/src/app/course-list/course/course.component.html
+++ b/src/app/course-list/course/course.component.html
@@ -1,4 +1,4 @@
-<div class="card" [appCourseBorderColor]="course">
+<div class="card" [appCourseBorderColor]="course" [ngClass]="{topRated: course.topRated}">
   <div class="card-body row">
     <app-course-description
       [course]="course"
