--- a/src/app/course-list/course-description/course-description.component.html
+++ b/src/app/course-list/course-description/course-description.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <h5 class="card-title col-8">
-    {{ course.title }}
+    {{ course.title | uppercase }}
     <span *ngIf="course.topRated">&#x2605;</span>
   </h5>
   <div class="col-2 course-creation-date">{{ course.creationDate | date: 'dd.MM.yyyy' }}</div>
