--- a/src/app/course-list/courses/courses.component.html
+++ b/src/app/course-list/courses/courses.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <app-menu></app-menu>
   <app-course
-    *ngFor="let course of courses"
+    *ngFor="let course of courses | orderBy: 'creationDate'"
     [course]="course"
     (deleteCourse)="deleteCourse($event)"
   >
