--- a/src/app/course-list/courses/courses.component.html
+++ b/src/app/course-list/courses/courses.component.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
-  <app-menu></app-menu>
+  <app-menu
+    (setSearchPhrase)="setSearchPhrase($event)"
+  ></app-menu>
   <app-course
-    *ngFor="let course of courses | orderBy: 'creationDate'"
+    *ngFor="let course of courses | filterBy: searchPhrase | orderBy: 'creationDate'"
     [course]="course"
     (deleteCourse)="deleteCourse($event)"
   >
