--- a/src/app/course-list/menu/menu.component.html
+++ b/src/app/course-list/menu/menu.component.html
@@ -1,4 +1,6 @@
 <div class="row p-3">
-  <app-search></app-search>
+  <app-search
+    (setSearchPhrase)="setSearchPhraseHandler($event)"
+  ></app-search>
   <app-button label="Add course" class="ml-auto"></app-button>
 </div>
