--- a/src/app/course-list/courses/courses.component.html
+++ b/src/app/course-list/courses/courses.component.html
@@ -2,6 +2,7 @@
   <app-menu
     (setSearchPhrase)="setSearchPhrase($event)"
   ></app-menu>
+  <app-modal></app-modal>
   <app-course
     *ngFor="let course of courses | filterBy: searchPhrase | orderBy: 'creationDate'"
     [course]="course"
