--- a/src/app/core/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/core/breadcrumbs/breadcrumbs.component.html
@@ -1,4 +1,4 @@
-<nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb" *ngIf="authService.isAuthenticated()">
     <ol class="breadcrumb">
       <li class="breadcrumb-item active" aria-current="page">Courses</li>
     </ol>
