--- a/src/app/course-list/modal/modal.component.html
+++ b/src/app/course-list/modal/modal.component.html
@@ -8,18 +8,20 @@
           class="close"
           data-dismiss="modal"
           aria-label="Close"
-          (click)="toggle($event)"
+          (click)="hide($event)"
         >
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Yes</button>
+        <button type="button" class="btn btn-primary" (click)="confirm($event)">
+          Yes
+        </button>
         <button
           type="button"
           class="btn btn-secondary"
           data-dismiss="modal"
-          (click)="toggle($event)"
+          (click)="hide($event)"
         >
           No
         </button>
