course form draft

--- a/src/app/course-list/course/course.component.html
+++ b/src/app/course-list/course/course.component.html
@@ -5,7 +5,7 @@
       class="col-11"
     ></app-course-description>
     <div class="col-1">
-      <app-button label="Edit" class="mb-1 course-btn"></app-button>
+      <app-button label="Edit" class="mb-1 course-btn" (click)="navigateToCourseForm()"></app-button>
       <app-button
         label="Delete"
         class="course-btn delete-course-btn"
