--- a/src/app/course-list/course-form/course-form.component.html
+++ b/src/app/course-list/course-form/course-form.component.html
@@ -6,7 +6,7 @@
       class="form-control"
       id="courseTitle"
       placeholder="title"
-      [value]="course.title"
+      [value]="course.title || ''"
     />
   </div>
   <div class="form-group">
@@ -16,7 +16,7 @@
       id="courseDescription"
       rows="3"
       placeholder="course description"
-      [value]="course.description"
+      [value]="course.description || ''"
     ></textarea>
   </div>
   <div class="form-group">
@@ -25,7 +25,7 @@
       class="form-control"
       id="courseDate"
       placeholder="course date"
-      [value]="course.date"
+      [value]="course.date || ''"
     />
   </div>
   <div class="form-group">
@@ -33,8 +33,8 @@
     <input
       class="form-control"
       id="courseDuration"
-      placeholder="course duration"
-      [value]="course.duration"
+      placeholder="course duration in minutes"
+      [value]="course.duration || ''"
     />
   </div>
   <div class="form-group">
