--- a/src/app/course-list/course-form/course-form.component.html
+++ b/src/app/course-list/course-form/course-form.component.html
@@ -46,5 +46,5 @@
     />
   </div>
   <button type="button" class="btn btn-primary">Save</button>
-  <button type="button" class="btn btn-secondary">Cancel</button>
+  <a type="button" class="btn btn-secondary" routerLink="/courses">Cancel</a>
 </div>
