enable aot/ fix template mistakes

--- a/src/app/course-list/course-form/course-form.component.html
+++ b/src/app/course-list/course-form/course-form.component.html
@@ -24,8 +24,8 @@
     <input
       class="form-control"
       id="courseDate"
-      placeholder="course date"
-      [value]="course.date || ''"
+      placeholder="course creation date"
+      [value]="course.creationDate || ''"
     />
   </div>
   <div class="form-group">
