--- a/src/app/course-list/modal/modal.component.html
+++ b/src/app/course-list/modal/modal.component.html
@@ -3,26 +3,15 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">Would you like to delete the course?</h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-          (click)="hide($event)"
-        >
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="hide()">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" (click)="confirm($event)">
+        <button type="button" class="btn btn-primary" (click)="confirm()">
           Yes
         </button>
-        <button
-          type="button"
-          class="btn btn-secondary"
-          data-dismiss="modal"
-          (click)="hide($event)"
-        >
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="hide()">
           No
         </button>
       </div>
