--- a/src/app/login/login-page/login-page.component.html
+++ b/src/app/login/login-page/login-page.component.html
@@ -23,7 +23,7 @@
     <button
       type="submit"
       class="btn btn-primary"
-      (click)="authenticate($event)"
+      (click)="authenticate()"
     >
       Submit
     </button>
