applying pipes to course form

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -14,7 +14,7 @@
         <app-button
           label="Log off"
           type="button"
-          (click)="logOff($event)"
+          (click)="logOff()"
           class="logoff-btn"
         ></app-button>
       </li>
