--- a/src/app/course-list/course-form/course-form.component.html
+++ b/src/app/course-list/course-form/course-form.component.html
@@ -25,7 +25,7 @@
       class="form-control"
       id="courseDate"
       placeholder="course creation date"
-      [value]="course.creationDate || ''"
+      [value]="(course.creationDate | date: 'dd.MM.yyyy') || ''"
     />
   </div>
   <div class="form-group">
@@ -36,6 +36,7 @@
       placeholder="course duration in minutes"
       [value]="course.duration || ''"
     />
+    <span>{{ (course.duration | minutesToHours) || '' }}</span>
   </div>
   <div class="form-group">
     <label for="courseDuration">Authors</label>
