--- a/src/app/course-list/courses/courses.component.html
+++ b/src/app/course-list/courses/courses.component.html
@@ -1,14 +1,17 @@
-<div class="container-fluid">
+<div
+  class="container-fluid"
+  *ngIf="(courses$ | async) as courses"
+>
   <app-menu (setSearchPhrase)="setSearchPhrase($event)"></app-menu>
   <app-modal #modal (handlerOnConfirm)="deleteCourse($event)"></app-modal>
   <app-course
     *ngFor="
-      let course of (courses$ | async | filterBy: searchPhrase | orderBy: 'creationDate')
+      let course of (courses | filterBy: searchPhrase | orderBy: 'creationDate')
     "
     [course]="course"
     (deleteCourse)="modal.show($event)"
   >
   </app-course>
-  <div *ngIf="(courses$ | async)?.length === 0">No data. Feel free to add a new course</div>
+  <div *ngIf="courses.length === 0">No data. Feel free to add a new course</div>
   <app-button label="Load more" (clickHandler)="loadMore()"></app-button>
 </div>
