proper redirects for new course/ edit course

--- a/src/app/course-list/course/course.component.html
+++ b/src/app/course-list/course/course.component.html
@@ -5,7 +5,7 @@
       class="col-11"
     ></app-course-description>
     <div class="col-1">
-      <a routerLink="/course-edit/{{course.id}}" class="mb-1 course-btn btn">Edit</a>
+      <a routerLink="/courses/{{course.id}}" class="mb-1 course-btn btn">Edit</a>
       <app-button
         label="Delete"
         class="course-btn delete-course-btn"
