--- a/src/app/course-list/menu/menu.component.html
+++ b/src/app/course-list/menu/menu.component.html
@@ -2,5 +2,5 @@
   <app-search
     (setSearchPhrase)="setSearchPhraseHandler($event)"
   ></app-search>
-  <a routerLink="/course-edit" class="ml-auto">Add course</a>
+  <a routerLink="/courses/new" class="ml-auto">Add course</a>
 </div>
