--- a/src/app/course-list/course-form/course-form.component.html
+++ b/src/app/course-list/course-form/course-form.component.html
@@ -46,6 +46,6 @@
       placeholder="course authors"
     />
   </div>
-  <button type="button" class="btn btn-primary">Save</button>
+  <button type="button" class="btn btn-primary" (click)="clickHandler.emit(course)">Save</button>
   <a type="button" class="btn btn-secondary" routerLink="/courses">Cancel</a>
 </div>
