--- a/src/app/course-list/courses/courses.component.html
+++ b/src/app/course-list/courses/courses.component.html
@@ -13,5 +13,5 @@
   >
   </app-course>
   <div *ngIf="courses.length === 0">No data. Feel free to add a new course</div>
-  <app-button label="Load more" (clickHandler)="loadMore()"></app-button>
+  <app-button label="Load more" (click)="loadMore()"></app-button>
 </div>
