--- a/src/app/course-list/courses/courses.component.html
+++ b/src/app/course-list/courses/courses.component.html
@@ -6,7 +6,7 @@
   <app-modal #modal (handlerOnConfirm)="deleteCourse($event)"></app-modal>
   <app-course
     *ngFor="
-      let course of (courses | filterBy: searchPhrase | orderBy: 'creationDate')
+      let course of (courses | orderBy: 'creationDate')
     "
     [course]="course"
     (deleteCourse)="modal.show($event)"
