--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="navbar fixed-bottom bg-light text-right">
+<footer class="navbar bg-light text-right">
 Copyright &copy; Videocourses, All rights reserved
 <footer>
