--- a/src/app/course-list/new-course-form/new-course-form.component.html
+++ b/src/app/course-list/new-course-form/new-course-form.component.html
@@ -1,1 +1,1 @@
-<app-course-form [course]="course" (clickHandler)="createCourse($event)"></app-course-form>
+<app-course-form [course]="course" (click)="createCourse($event)"></app-course-form>
