--- a/src/app/course-list/search/search.component.html
+++ b/src/app/course-list/search/search.component.html
@@ -1,16 +1,11 @@
 <div class="form-inline">
   <input
+    [value]="searchPhrase || ''"
     #searchInput
     type="text"
     class="form-control"
     placeholder="Search"
-    (keyup)="!searchInput.value && updateSearchValue(searchInput.value)"
+    (keyup)="updateSearchValue(searchInput.value)"
     name="search"
   />
-  <app-button
-    label="Search"
-    type="button"
-    (click)="updateSearchValue(searchInput.value)"
-    class="ml-1 menu-search-btn"
-  ></app-button>
 </div>
