--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
+<app-spinner></app-spinner>
 <app-breadcrumbs></app-breadcrumbs>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
