--- a/src/app/course-list/courses/courses.component.html
+++ b/src/app/course-list/courses/courses.component.html
@@ -1,17 +1,16 @@
-<div
-  class="container-fluid"
-  *ngIf="(courses$ | async) as courses"
->
-  <app-menu (setSearchPhrase)="setSearchPhrase($event)" [searchPhrase]="searchPhrase"></app-menu>
-  <app-modal #modal (handlerOnConfirm)="deleteCourse($event)"></app-modal>
+<div class="container-fluid">
+  <app-menu></app-menu>
+</div>
+<div class="container-fluid" *ngIf="(courses$ | async) as courses">
+  <app-modal #modal></app-modal>
   <app-course
-    *ngFor="
-      let course of (courses | orderBy: 'creationDate')
-    "
+    *ngFor="let course of (courses | orderBy: 'creationDate')"
     [course]="course"
     (deleteCourse)="modal.show($event)"
   >
   </app-course>
-  <div *ngIf="courses.length === 0">No data. Feel free to add a new course</div>
+  <div *ngIf="courses.length === 0">
+    No data. Feel free to add a new course
+  </div>
   <app-button label="Load more" (click)="loadMore()"></app-button>
 </div>
