--- a/src/app/core/spinner/spinner.component.html
+++ b/src/app/core/spinner/spinner.component.html
@@ -1,4 +1,4 @@
-<div class="spinner-background" *ngIf="isActive">
+<div class="spinner-background" *ngIf="loadingService.status | async">
   <div class="spinner-border" role="status">
     <span class="sr-only">Loading...</span>
   </div>
