--- a/src/app/course-list/edit-course-form/edit-course-form.component.html
+++ b/src/app/course-list/edit-course-form/edit-course-form.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="course$ | async as course">
-  <app-course-form [course]="course" (click)="updateCourse($event)"></app-course-form>
+  <app-course-form [course]="course"></app-course-form>
 </div>
